apps/base/paperless-ngx/public.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-public
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [paperless.harville.dev]
  rules:
    - host: paperless.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 80
